--- a/css/style.css
+++ b/css/style.css
@@ -64,11 +64,21 @@ header h1 {
 	display: none;
 	list-style-type: none;
 	position: absolute;
+	top:100%;
 	left: 10px;
+	margin-top: -2px;
 	background-color: white;
 	border: 1px solid black;
 	border-radius:5px;
 	padding: 5px;
+	
+}
+@-moz-document url-prefix()
+{
+	.submenu ul {
+		margin-top: -1px;
+		top:18px;
+	}
 	
 }
 
@@ -136,27 +146,42 @@ section h4 {
 	width:220px;
 }
 
-td {
+table {
+	/*border-collapse: collapse;*/
+}
+
+tr,td {
 	margin: 0;
-	width: 35px;
+	padding: 0;
+	border-spacing: 0;
+
+}
+
+td {
+	width: 25px;
 	height: 25px;
 }
 
 button {
-	width: 100%;
-
-
-}
-td.equals {
-	margin: 0;
-
-	height: 52px;
-}
-.equals button{
-	margin: 0;
 	padding: 0;
-	height: 100%;
+	margin: 0;
+	width: 100%;
+	height: 100%
 }
+
+td.equals {
+	height: 53px;
+}
+
+@-moz-document url-prefix()
+{
+	td.equals {
+	height: 52px;
+	}
+
+	
+}
+
 
 /*стили для страницы test*/
 
